# beamp

./: Cargo.toml  README.md  package.json
crates/beam/: Cargo.toml
crates/beam/tests/: lib.rs
crates/bytecode/: Cargo.toml
crates/bytecode_derive/: Cargo.toml
crates/core/beam/: Cargo.toml
crates/core/beam/src/: beam_file.rs  chunk.rs  lib.rs  parts.rs
crates/core/beam/tests/: lib.rs
crates/core/bytecode/: Cargo.toml
crates/core/bytecode/examples/: decode-encode-check.rs  parse-beam.rs
crates/core/bytecode/src/: lib.rs
crates/core/offset/: Cargo.toml
crates/core/offset/src/: lib.rs
