\[workspace]
members=["crates/bytecode","crates/beam","crates/bytecode_derive"]
resolver="3"

[workspace.package]
license = "MIT"
description = "BEAM file parsers and encoders"
repository = "https://github.com/portal-co/beamp.git"
version = "0.2.0"

[workspace.dependencies]
beamcode = { path = "crates/bytecode", version = "0.2.0", package = "portal_solutions_beamcode" }
beamcode_derive = { path = "crates/bytecode_derive", version = "0.2.0", package = "portal_solutions_beamcode_derive" }
beam_file = { path = "crates/beam", version = "0.2.0", package = "portal_solutions_beam_file" }
thiserror = "^1"
byteorder = "1.2"






swc_atoms = "^8.0.0"
swc_common = "^16.0.0"
swc_ecma_ast = "^17.0.0"
swc_ecma_compat_es2015 = "^32.0.0"
swc_ecma_minifier = "^35.0.0"
swc_ecma_transforms_base = "^29.0.0"
swc_ecma_transforms_optimization = "^31.0.0"
swc_ecma_utils = "^23.0.0"
swc_ecma_visit = "^17.0.0"
swc_bundler = "^34.0.0"
swc_ecma_loader = "^16.0.0"
swc_ecma_parser = "^26.0.0"
swc_ecma_codegen = "^19"



portal-solutions-swibb={version="^0.5.0",git="https://github.com/portal-co/swibb.git"}
