[workspace]
members=["crates/bytecode","crates/beam","crates/bytecode_derive"]
resolver="3"

[workspace.package]
license = "MIT"
description = "BEAM file parsers and encoders"
repository = "https://github.com/portal-co/beamp.git"
version = "0.2.0"

[workspace.dependencies]
beamcode = { path = "crates/bytecode", version = "0.2.0", package = "portal_solutions_beamcode" }
beamcode_derive = { path = "crates/bytecode_derive", version = "0.2.0", package = "portal_solutions_beamcode_derive" }
beam_file = { path = "crates/beam", version = "0.2.0", package = "portal_solutions_beam_file" }
thiserror = "^1"
byteorder = "1.2"