[workspace]
members=["crates/core/bytecode","crates/core/beam","crates/core/bytecode_derive","crates/core/offset"]
resolver="3"

[workspace.package]
license = "MIT"
description = "BEAM file parsers and encoders"
repository = "https://github.com/portal-co/beamp.git"
version = "0.2.0"

[workspace.dependencies]
beamcode = { path = "crates/core/bytecode", version = "0.2.0", package = "portal_solutions_beamcode" }
beamcode_derive = { path = "crates/core/bytecode_derive", version = "0.2.0", package = "portal_solutions_beamcode_derive" }
beam_file = { path = "crates/core/beam", version = "0.2.0", package = "portal_solutions_beam_file" }
offsets = { path = "crates/core/offset", version = "0.2.0", package = "portal_solutions_offset" }
thiserror = "^1"
byteorder = "1.2"