[package]
edition = "2021"
name = "beam_file"
version = "0.3.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
byteorder.workspace = true
libflate = "^1"

beamcode = {workspace=true,optional=true}

[features]
bytecode=["dep:beamcode"]