[package]
name = "portal_solutions_beamcode_derive"
version.workspace = true
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license.workspace = true
description.workspace = true
repository.workspace = true


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"