[package]
edition = "2021"
name = "portal_solutions_beam_file"
version.workspace = true
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
byteorder.workspace = true
offsets.workspace = true
libflate = "^1"

beamcode = {workspace=true,optional=true}

[features]
bytecode=["dep:beamcode"]